<resources>
    <string name="app_name">MAD</string>
    <string name="hi_n_please_login">Hi,\n Please Login</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="name">Name</string>
    <string name="user_nprofile">User\nProfile</string>
    <string name="todo">TODO</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone N0</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="Password">Password</string>
    <string name="UPDATE">UPDATE PROFILE</string>
    <string name="DELETE">DELETE PROFILE</string>
    <string name="login">Login</string>
    <string name="Todo">TODO</string>
    <string name="start">START</string>

</resources>